<resources>
<string name="app_name">QWater</string>
<string name="novo_relatorio">Report</string>
<string name="listar_relatorios">List Reports</string>
<string name="listar_fontes">List Sources</string>
<string name="registrar_fonte">Register Source</string>
<string name="classificacao_cea">EC Classification</string>
<string name="classificacao_ras_corrigida">Corrected SAR classification</string>
<string name="classe_salinidade">Salinity Class: </string>
<string name="analise_do_relatorio">Quality parameters</string>
<string name="mostrar_grafico">show graph</string>
<string name="cea">EC<small>w</small>:</string>
<string name="analisar_relatorio">Analyze report</string>
<string name="erro_verifique_dados">Input data error. Tip: use a period instead of a comma.</string>
<string name="cations">Cations (mmol<small>c</small> L<sup><small>-1</small></sup>)</string>
<string name="anions">Anions (mmol<small>c</small> L<sup><small>-1</small></sup>)</string>
<string name="mg" translatable="false">Mg<sup><small>2+</small></sup></string>
<string name="ca" translatable="false">Ca<sup><small>2+</small></sup></string>
<string name="k" translatable="false">K<sup><small>+</small></sup></string>
<string name="na" translatable="false">Na<sup><small>+</small></sup></string>
<string name="sodio">Sodium - Na<sup><small>+</small></sup></string>
<string name="cl" translatable="false">Cl<sup><small>-</small></sup></string>
<string name="cloreto">Cloreto - Cl<sup><small>-</small></sup></string>
<string name="co3" translatable="false">CO<sub><small>3</small></sub><sup><small>2-</small></sup></string>
<string name="hco3" translatable="false">HCO<sub><small>3</small></sub><sup><small>-</small></sup></string>
<string name="so4" translatable="false">SO<sub><small>4</small></sub><sup><small>2-</small></sup></string>
<string name="cea_unit">EC<small>w</small> unit</string>
<string name="cea_hint">EC<small>w</small></string>
<string name="cea_unidade">EC<small>w</small> unit: dS m<sup><small>-1</small></sup></string>
<string name="boro" translatable="false">B<sub><small>(ppm)</small></sub></string>
<string name="avaliar_qualidade">Assess the quality</string>
<string-array name="molecules" translatable="false">
    <item>mmol<small>c</small> L<sup><small>-1</small></sup></item>
    <item>mg L<sup><small>-1</small></sup></item>
    <item>mEq L<sup><small>-1</small></sup></item>
</string-array>
<string-array name="condutividade" translatable="false">
    <item>dS m<sup><small>-1</small></sup></item>
    <item>mS cm<sup><small>-1</small></sup></item>
    <item>μS cm<sup><small>-1</small></sup></item>
</string-array>
<string name="coerencia">Results coherence</string>
<string name="ras">SAR</string>
<string name="ras_corrigida">Corrected SAR</string>
<string name="ras_unidade">SAR* unity: mmol<small>c</small> L<sup><small>-1</small></sup></string>
<string name="ras_asterisco">SAR* :</string>
<string name="ras_asterisco_sem_pontos">SAR*</string>
<string name="condutividade_eletrica">Electric conductivity</string>
<string name="classificacao">Classification</string>
<string name="riscos_salinidade">Salinity risks</string>
<string name="problemas_infiltracao">Infiltration Problems</string>
<string name="riscos_toxidez">Toxicity risks</string>
<string name="riscos_toxidez_titulo">Toxicity risks: Impact of contact with root and leaf</string>
<string name="problemas_ph">pH problems</string>
<string name="save">Save</string>
<string name="relatorio_salvo">Report successfully stored.</string>
<string name="C1">C1 Classification: Low. \n\n\tCan be safely for most crops on most soils. No detrimental effects will usually be noticed.</string>
<string name="C2">C2 Classification: Moderate. \n\n\tCan be used for all but extremely salt sensitive.</string>
<string name="C3">C3 Classification: Medium. \n\n\tCan be used on soils of moderate to good permeability. Regular leaching may be needed. Crops with moderate to good salt tolerance should be grown.</string>
<string name="C4">C4 Classification: High. \n\n\tCan be used only in soils of good permeability. Special leaching is needed. Salt tolerant crops are suitable.</string>
<string name="C5">C5 Classification: Very high. \n\n\tUndesirable for irrigation and should be used only in highly permeable soils with frequent leaching and with plants of high salt tolerance. Soil should be tested for salinity increases yearly.</string>
<string name="C6">C6 Classification: Excessive. \n\n\tUnsuitable for irrigation but cultivation of halophyte species</string>
<string name="S1">S1 Classification: Low. \n\n\tCan be used on all soil with little danger of accumulation of exchangeable sodium.</string>
<string name="S2">S2 Classification: Medium. \n\n\tCan be used in all soil with good permeability; appreciable sodium hazards in soils of high clay and low organic matter.</string>
<string name="S3">S3 Classification: High. \n\n\tTends to cause harmful sodium accumulation in most soil: needs good drainage, high leaching and organic matter addition.</string>
<string name="S4">S4 Classification: Very high. \n\n\tGenerally unsatisfactory for irrigation.</string>
<string name="CL1"><b>Cloreto:</b> Low risk. Generally safe for all plants.</string>
<string name="CL2"><b>Cloreto:</b> Medium risk. Sensitive plants usually show slight to moderate injury.</string>
<string name="CL3"><b>Cloreto:</b> High risk. Moderately tolerant plants usually show slight to substantial injury.</string>
<string name="CL4"><b>Cloreto:</b> Very high risk. Severe problems</string>
<string name="CL1_info">Low risk. Generally safe for all plants.</string>
<string name="CL2_info">Medium risk. Sensitive plants usually show slight to moderate injury.</string>
<string name="CL3_info">High risk. Moderately tolerant plants usually show slight to substantial injury.</string>
<string name="CL4_info">Very high risk. Severe problems</string>
<string name="B1"><b>Boron:</b> Low risk. Satisfactory for all crops.</string>
<string name="B2"><b>Boron:</b> Medium risk. Satisfactory for most crops; sensitive crops may show injury.</string>
<string name="B3"><b>Boron:</b> High risk. Satisfactory for semi-tolerant crops; sensitive crops are usually reduced in plant vigour.</string>
<string name="B4"><b>Boron:</b> Very high risk. Suitable only for tolerant plants.</string>
<string name="B1_info">Low risk. Satisfactory for all crops.</string>
<string name="B2_info">Medium risk. Satisfactory for most crops; sensitive crops may show injury.</string>
<string name="B3_info">High risk. Satisfactory for semi-tolerant crops; sensitive crops are usually reduced in plant vigour.</string>
<string name="B4_info">Very high risk. Suitable only for tolerant plants.</string>
<string name="PH1">No use restriction.</string>
<string name="PH2">Mild to moderate restriction.</string>
<string name="PH3">Severe restriction.</string>
<string name="SS1"><b>Sodium, surface irrigation:</b> No risk.</string>
<string name="SS2"><b>Sodium, surface irrigation:</b> Moderate risk.</string>
<string name="SS3"><b>Sodium, surface irrigation:</b> Severe risk.</string>
<string name="SA1"><b>Sodium, sprinkler irrigation:</b> No risk.</string>
<string name="SA2"><b>Sodium, sprinkler irrigation:</b> Moderate risk.</string>
<string name="SS1_info">No risk.</string>
<string name="SS2_info">Moderate risk.</string>
<string name="SS3_info">Severe risk.</string>
<string name="SA1_info">No risk.</string>
<string name="SA2_info">Moderate risk.</string>
<string name="CO1">Excellent result.</string>
<string name="CO2">Acceptable result.</string>
<string name="CO3">Uncertain outcome. It is recommended to review the report data.</string>
<string name="coerencia_nao_informado">It is not possible to calculate the coherence of the data, as not all cations and anions have been informed.</string>
<string name="ph_nao_informado">It was not possible to estimate the pH problems. Value not informed.</string>
<string name="na1_nao_informado"><b>Sodium, surface irrigation:</b> It was not possible to estimate. Check the input data.</string>
<string name="na2_nao_informado"><b>Sodium, sprinkler irrigation:</b> It was not possible to estimate. Check the input data.</string>
<string name="cea_nao_informado">Electrical Conductivity value not inserted.</string>
<string name="ras_nao_informado">It was not possible to estimate the infiltration problems. Check the input data.</string>
<string name="ras_nao_calculado">It was not possible to calculate SAR*. Check the input data.</string>
<string name="boro_nao_informado"><b>Boron: </b>Value not informed.</string>
<string name="cl_nao_informado"><b>Chloride: </b>Value not informed.</string>
<string name="na_nao_informado"><b>Sodium: </b>Value not informed.</string>
<string name="erro_salvar">Error storing the report.</string>
<string name="classification_error">Rating error.</string>
<string name="valor_incorreto">Some value entered is incorrectly formatted</string>
<string name="obter_localizacao">Get Location</string>
<string name="escolher_a_data">Tap to choose the date…</string>
<string name="informacao_da_data">Select the analysis date</string>
<string name="informacao_da_fonte">Select the analysis source</string>
<string name="escolher_fonte">Choose the sample source</string>
<string name="title_activity_main">Home</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="nav_header_title">QWater</string>
<string name="nav_header_subtitle">Open beta</string>
<string name="nav_header_desc">Navigation header</string>
<string name="action_about">About</string>
<string name="erro_nome_vazio">Type the source name</string>
<string name="adicionar_fonte">Add source</string>
<string name="erro_calculo">Could not calculate</string>
<string name="home_title">Home</string>
<string name="coerencia_titulo">Coherence of the results of the chemical analysis of water</string>
<string name="concentracao_cation_anions">Cations and Anions Concentration</string>
<string name="r_formula_top"> | Σ Cations - Σ Anions |</string>
<string name="r_formula_bot"> | Σ Cations + Σ  Anions |</string>
<string name="resultado_excelente">Excellent result</string>
<string name="resultado_aceitavel">Acceptable result</string>
<string name="resultado_duvidoso">Uncertain outcome</string>
<string name="r_5"><![CDATA[R < 5%]]></string>
<string name="_5_r_10"><![CDATA[5% <= R <= 10%]]></string>
<string name="r_10"><![CDATA[R > 10%]]></string>
<string name="r_igual">R =</string>
<string name="x_100">x 100</string>
<string name="voltar">Back</string>
<string name="desenvolvido_por">Developed by:</string>
<string name="professores_orientadores">Guiding teachers:</string>
<string name="nomes_professores">-Francisco de Assis Pereira Vasconcelos de Arruda \n-Nildo da Silva Dias \n-Osvaldo Nogueira de Sousa Neto</string>
<string name="arlan_graduando">Arlan de Medeiros, graduated in Information Systems - UFERSA - Angicos</string>
<string name="edit_location">edit location</string>
<string name="edit_date">edit date</string>
<string name="editar_relatorio">Edit report</string>
<string name="remover_relatorio">Remove report</string>
<string name="ver_relatorio">View report</string>
<string name="latitude">Latitude</string>
<string name="longitude">Longitude</string>
<string name="adicionar_local_da_fonte">Add water source location</string>
<string name="tipo_da_fonte">Source type</string>
<string name="nome_da_fonte">Source name</string>
<string name="toque_para_escrever">Tap to write</string>
<string name="longitude_da_fonte">Water source longitude</string>
<string name="latitude_da_fonte">Water source Latitude</string>
<string name="endereco_aproximado">Approximate address</string>
<string name="confirmar">Confirm</string>
</resources>