<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_activities.AboutActivity">

    <ImageButton
        android:id="@+id/BUTTON_BACK6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView76"
        app:layout_constraintTop_toBottomOf="@+id/textView76"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/textView96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/voltar"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/BUTTON_BACK6"
        app:layout_constraintTop_toTopOf="@+id/BUTTON_BACK6" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/desenvolvido_por"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/professores_orientadores"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textView73"
        app:layout_constraintTop_toBottomOf="@+id/textView77" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/nomes_professores"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView74"
        app:layout_constraintTop_toBottomOf="@+id/textView74" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/arlan_graduando"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView73"
        app:layout_constraintTop_toBottomOf="@+id/textView73" />
</android.support.constraint.ConstraintLayout>